--- a/config/db.yml
+++ b/config/db.yml
@@ -2,7 +2,7 @@ admin:
     DB_HOST: localhost
     DB_USER: root
     DB_PASS: root
-    DB_NAME: dinkly_admin
+    DB_NAME: admin
 unit_test:
     DB_HOST: localhost
     DB_USER: root
